# linkedin-post-generator

./: .env.example  .gitignore  README.md  pyproject.toml
src/linkedin_post/: crew.py  main.py
src/linkedin_post/config/: agents.yaml  tasks.yaml
src/linkedin_post/tools/: linkedin_scraper.py  linkedin_scraper_new.py  web_research.py
