[project]
name = "linkedin_post"
version = "0.1.0"
description = "linkedin-post using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.0,<1.0.0",
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "langchain-community>=0.2.0",
    "ddgs>=6.1.0",
    "webdriver-manager>=4.0.0",
    "beautifulsoup4>=4.12.0"
]

[project.scripts]
linkedin_post = "linkedin_post.main:run"
run_crew = "linkedin_post.main:run"
train = "linkedin_post.main:train"
replay = "linkedin_post.main:replay"
test = "linkedin_post.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
